k8s/apps/development/gitlab/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gitlab
  namespace: development
spec:
  hosts:
    - 'gitlab.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: gitlab-webservice.development.svc.cluster.local
          weight: 100
          headers:
            response:
              set:
                Referrer-Policy: no-referrer
                X-Content-Type-Options: nosniff
                X-DNS-Prefetch-Control: 'off'
                X-Download-Options: noopen
                X-Frame-Options: deny
                X-XSS-Protection: 1; mode=block
